2009-06-04  Manuel Cerón  <ceronman@gmail.com>

	* DragTool.cs: Renamed to DragTool

2009-06-04  Manuel Cerón  <ceronman@gmail.com>

	* DragTool.cs:
	* DragTracker.cs:
	* SelectionTool.cs: DragTracker renamed to DragTool

2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* UndoableTool.cs: Added UndoableTool

2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* ITool.cs: Added UndoActivity property.

	* AbstractTool.cs: Added UndoActivity Property. Some
	properties migrated to automatic properties.
